--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "protos"]
 	path = protos
-	url = git@gitlab.com:team46535929/protos.git
+	url = git@github.com:diyorbeknematov/E-commerce_protos.git
